# bluescreenjournal

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  install.sh  justfile
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: BACKUP_RESTORE.md  CHEAT_SHEET.md  COMPARE.md  DATASHEET.md  DISTRIBUTION.md  FAQ.md  FEATURES_NEXT10.md  FEATURE_PASS_VNEXT.md  MACRO_GUIDE.md  MAINTENANCE_BASELINE.md  NEXT_PRIORITIES.md  NOSTALGIA_GUARDRAILS.md  PRIVACY.md  PRODUCT_GUIDE.md  QUICKSTART.md  RELEASE_CERTIFICATION.md  SETTINGS_GUIDE.md  SETUP_GUIDE.md  START_HERE.md  SYNC_GUIDE.md  SYSOP_FEATURES.md  TERMINAL_GUIDE.md  TROUBLESHOOTING.md  V1_2_PLAN.md  V1_3_2_PLAN.md  V1_3_3_PLAN.md  V1_3_PLAN.md  V1_3_UX_CHECKLIST.md  V2_1_1_PLAN.md  V2_1_2_PLAN.md  V2_2_1_PLAN.md  V2_2_2_PLAN.md  V2_2_3_PLAN.md  V2_2_4_PLAN.md  V3_0_PLAN.md  WHATS_NEW.md  bsj.1  config.example.json  index.md
docs/certification/: v2.2.0.md  v2.2.1.md  v2.2.2.md  v2.2.3.md
docs/releases/: README.md  v0.1.10.md  v0.1.11.md  v0.1.12.md  (+30 more)
scripts/: audit-release.sh  certify-release.sh  check-tui-snapshots.sh  installer-action-matrix.sh  installer-test-lib.sh  manual-smoke-gui-terminals.sh  package-release.sh  qa-gate.sh  render_marketing_assets.py  scrub-binary-paths.sh  smoke-public-install.sh  smoke-release-install.sh  stability-gate.sh
src/: ai.rs  config.rs  doctor.rs  help.rs  logging.rs  main.rs  platform.rs  search.rs  secure_fs.rs  spellcheck.rs  sync.rs  sysop.rs  vault.rs
(+10 files in other folders)
