[package]
name = "bsj"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
chrono = "0.4.40"
chacha20poly1305 = "0.10.1"
crossterm = "0.29.0"
dirs = "6.0.0"
hex = "0.4.3"
rand = "0.8.5"
ratatui = "0.29.0"
secrecy = "0.10.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
zeroize = { version = "1.8.1", features = ["std"] }

[dev-dependencies]
tempfile = "3.18.0"
